--- a/publications.bib
+++ b/publications.bib
@@ -1,6 +1,6 @@
 
 @article{Maia2025Mechanochemical,
-  author  = {Maia, Gustavo P. and Gon{\c{c}}alves, Catarina and Carvalho, Ana J. and Andr{\'e}, V{\^a}nia and Galv{\~a}o, Adelino and Ribeiro, Ana P. C. and Pinheiro, Pedro F. and da Silva, Jos{\'e} Armando Lu{\'i}sa},
+  author  = {Maia, Gustavo P. and Gonçalves, Catarina and Carvalho, Ana J. and André, Vânia and Galvão, Adelino and Ribeiro, Ana P. C. and Pinheiro, Pedro F. and da Silva, José Armando Luísa},
   title   = {Mechanochemical Reactivity of Ribonucleosides Mediated by Inorganic Species: Implications for Extraterrestrial Organic Matter Interpretation},
   journal = {Applied Sciences},
   year    = {2025},
@@ -9,7 +9,7 @@
 }
 
 @article{Maia2023ShockInduced,
-  author  = {Maia, Gustavo P. and da Silva, Jos{\'e} Armando Lu{\'i}sa and Andr{\'e}, V{\^a}nia and Galv{\~a}o, Adelino M.},
+  author  = {Maia, Gustavo P. and da Silva, José Armando Luísa and André, Vânia and Galvão, Adelino M.},
   title   = {Shock-Induced Degradation of Guanosine and Uridine Promoted by Nickel and Carbonate: Potential Applications},
   journal = {Molecules},
   year    = {2023},
@@ -19,8 +19,8 @@
 
 @article{Franco2023DaQuimica,
   author  = {Franco, Ana and Maia, Gustavo P. and da Silva, J. A. L.},
-  title   = {Da Qu{\'\i}mica Bioinorg{\^a}nica para a Qu{\'\i}mica Prebi{\'o}tica: Levar Mais Longe o Legado do Prof. Fra{\'u}sto da Silva},
-  journal = {Boletim da Sociedade Portuguesa de Qu{\'\i}mica},
+  title   = {Da Química Bioinorgânica para a Química Prebiótica: Levar Mais Longe o Legado do Prof. Frústo da Silva},
+  journal = {Boletim da Sociedade Portuguesa de Química},
   year    = {2023},
   volume  = {47},
   number  = {171},
